--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -56,7 +56,7 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secundary);
@@ -64,6 +64,7 @@
   border: 0;
   border-radius: 0.8rem;
   cursor: pointer;
+  text-decoration: none;
   font: 700 1.4rem Archivo;
   display: flex;
   align-items: center;
@@ -71,7 +72,7 @@
   transition: 0.2s;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer a:hover {
   background: var(--color-secundary-dark);
 }
 
